added gc output